[package]
name = "yelb-appserver"
version = "0.1.5"
authors = ["Muhammad Saleem Mirza"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.8.3"
hostname = "0.3.1"
mimalloc = { version = "0.1.25", default-features = false }
redis = { version = "0.20.0", features = ["async-std-comp"] }
postgres = "0.19.1"
serde = "1.0.125"
serde_json = "1.0.64"
num_cpus = "1.13.0"

[profile.release]
opt-level = 2
debug = false
lto = true
codegen-units = 1
